--- a/main.html
+++ b/main.html
@@ -16,16 +16,16 @@
 		<input type="text" id="name" name="name"" minlength="3" maxlength="50"required>
 		<br><br>
 
-		<lable for="portfolio">Portfolio:</lable>
-		<input type="url"id="portfolio"name="portfolio" required>
+		<lable for='portfolio'>Portfolio:</lable>
+		<input type='url'id='portfolio'name='portfolio' required>
 		<br><br>
 
-		<label for="favColor">Favorite Color:</label>
-		<input type="color" id="favColor"name="favColor">
+		<label for='favColor'>Favorite Color:</label>
+		<input type='color' id='favColor'name='favColor'>
 		<br><br>
 
-		<label for="likeness">Likeness:</label>
-		<input type="range"id="likeness"name="likeness"min="1" max="100">
+		<label for='likeness'>Likeness:</label>
+		<input type='range'id="likeness"name="likeness" min="1" max="100">
 		<br><br>
 
 		<input type="submit"value"Submit>
