--- a/main.html
+++ b/main.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 	<h2>Feedback Form</h2>
+
 	<form method="post">
 		<label for="name">Name:</label>
-		<input type="text" id="name" name="name"" minlength="3" maxlength="50"required>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
 		<br><br>
 
-		<lable for='portfolio'>Portfolio:</lable>
-		<input type='url'id='portfolio'name='portfolio' required>
+		<label for="portfolio">Portfolio:</label>
+		<input type="url" id="portfolio" name="portfolio" required>
 		<br><br>
 
-		<label for='favColor'>Favorite Color:</label>
-		<input type='color' id='favColor'name='favColor'>
+		<label for="favColor">Favorite Color:</label>
+		<input type="color" id="favColor" name="favColor">
 		<br><br>
 
-		<label for='likeness'>Likeness:</label>
-		<input type='range'id="likeness"name="likeness" min="1" max="100">
+		<label for="likeness">Likeness:</label>
+		<input type="range" id="likeness" name="likeness" min="1" max="100">
 		<br><br>
 
-		<input type="submit"value"Submit>
+		<input type="submit" value="Submit">
 	</form>
-	
 
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
